--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -10,6 +10,7 @@
         "openUserDir": "Open user dir",
         "openSamplesDir": "Open samples dir",
         "openLogFile": "Open log file",
+        "settings": "Settings",
         "login": "Login",
         "endpoint": "Endpoint",
         "quit": "Quit",
