--- a/locales/ja.json
+++ b/locales/ja.json
@@ -76,5 +76,13 @@
         "yes": "はい",
         "no": "いいえ",
         "cancel": "取り消し"
+    },
+    "settings": {
+        "userdir": "ユーザディレクトリ",
+        "credentialsecret": "認証情報ファイルの暗号化キー",
+        "nodesexcludes": "読み込まないノード",
+        "projects": "プロジェクトを使う",
+        "submit": "アプリを再起動して適用する",
+        "cancel": "キャンセル"
     }
 }
