--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -11,6 +11,7 @@
         "openSamplesDir": "Open samples dir",
         "openLogFile": "Open log file",
         "settings": "Settings",
+        "addLocalNode": "Add a local node",
         "login": "Login",
         "endpoint": "Endpoint",
         "quit": "Quit",
@@ -75,7 +76,8 @@
         "ok": "OK",
         "yes": "Yes",
         "no": "No",
-        "cancel": "Cancel"
+        "cancel": "Cancel",
+        "openNodeDir": "Add a local node"
     },
     "settings": {
         "userdir": "User directory",
