--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -11,7 +11,10 @@
         "openSamplesDir": "Open samples dir",
         "openLogFile": "Open log file",
         "settings": "Settings",
+        "tools": "Tools",
         "addLocalNode": "Add a local node",
+        "addRemoteNode": "Add a remote node",
+        "rebuild": "Rebuild",
         "login": "Login",
         "endpoint": "Endpoint",
         "quit": "Quit",
