--- a/locales/ja.json
+++ b/locales/ja.json
@@ -11,7 +11,10 @@
         "openSamplesDir": "サンプルディレクトリを開く",
         "openLogFile": "ログファイルを開く",
         "settings": "設定",
+        "tools": "ツール",
         "addLocalNode": "ローカルのノードを追加",
+        "addRemoteNode": "リモートのノードを追加",
+        "rebuild": "リビルド",
         "login": "ログインする",
         "quit": "終了",
         "edit": "編集",
