add: background rebuild add: launch menu

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -16,7 +16,7 @@
         "addRemoteNode": "Add a remote node",
         "rebuild": "Rebuild",
         "login": "Login",
-        "endpoint": "Endpoint",
+        "relaunch": "Relaunch",
         "quit": "Quit",
         "edit": "Edit",
         "undo": "Undo",
@@ -27,6 +27,7 @@
         "pasteandmatchstyle": "Paste and Match Style",
         "delete": "Delete",
         "selectall": "Select All",
+        "endpoint": "Endpoint",
         "openLocalURL": "Open a local URL",
         "openLocalAdminURL": "Open a local Admin URL",
         "ngrokConnect": "Connect ngrok",
