--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -14,6 +14,7 @@
         "tools": "Tools",
         "addLocalNode": "Add a local node",
         "addRemoteNode": "Add a remote node",
+        "nodegen": "Run Node generator",
         "login": "Login",
         "relaunch": "Relaunch",
         "quit": "Quit",
@@ -82,7 +83,9 @@
         "cancel": "Cancel",
         "openNodeDir": "Add a node from local",
         "npmInstall": "Add a node from remote",
-        "npmInstallDesc": "Input module name or URL"
+        "npmInstallDesc": "Input module name or URL",
+        "nodegen": "Node generator",
+        "noselected": "You need to select one function node."
     },
     "settings": {
         "userdir": "User directory",
