fix #4, add LISTEN_PORT in settings

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -101,6 +101,8 @@
         "openlastfile": "Open a last file on startup",
         "httpnodeauth": "HTTP Node Authentication",
         "httpnodeauthuser": "Username",
-        "httpnodeauthpass": "Password"
+        "httpnodeauthpass": "Password",
+        "listenport": "Listen port",
+        "listenportPlaceholder": "when empty,use random port"
     }
 }
